# 2340-pokemon

./: .gitignore  CLAUDE.md  README.md  db.sqlite3  package.json  pyproject.toml
api/: admin.py  factories.py  models.py  pokeapi.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_remove_bartertrade_status_remove_moneytrade_status.py  0002_tradehistory_trade_ref_id_tradehistory_trade_type.py  0003_alter_pokemon_pokeapi_id.py  0003_tradehistory.py  0004_notification.py  0005_traderequest.py
api/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_email.html  password_reset_subject.txt
frontend/: .cta.json  README.md  package.json  signup.html  vite.config.js
frontend/src/: routeTree.gen.ts
frontend/src/components/: Chatbot.tsx  Header.tsx  ReportDialog.tsx  TradeCard.tsx  history.tsx  notifications.tsx
frontend/src/components/ui/: slider.tsx
frontend/src/lib/: api.ts  auth.ts  types.ts
frontend/src/routes/: __root.tsx  admin.tsx  demo.tanstack-query.tsx  history.tsx  incoming-trades.tsx  index.tsx  login.tsx  marketplace.tsx  notifications.tsx  pokemon.$pokemonId.tsx  resetPassword.tsx  search.tsx  signup.tsx  trade.$tradeId.tsx  user.$username.tsx
pokemon/: asgi.py  settings.py  urls.py  wsgi.py
