[project]
name = "pokemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "django>=5.1.5",
  "django-cors-headers>=4.7.0",
  "django-environ>=0.12.0",
  "pillow>=11.1.0",
  "pokebase>=1.4.1",
  "requests>=2.32.3",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
